re-formatted with black

--- a/hessian_toy_model.ipynb
+++ b/hessian_toy_model.ipynb
@@ -58,9 +58,10 @@
     "import matplotlib.colors as colors\n",
     "from functools import partial\n",
     "from matplotlib import rc\n",
-    "#rc('font',**{'family':'sans-serif','sans-serif':['Helvetica']})\n",
-    "rc('font',**{'family':'serif','serif':['Times']})\n",
-    "rc('text', usetex=True)\n",
+    "\n",
+    "# rc('font',**{'family':'sans-serif','sans-serif':['Helvetica']})\n",
+    "rc(\"font\", **{\"family\": \"serif\", \"serif\": [\"Times\"]})\n",
+    "rc(\"text\", usetex=True)\n",
     "plt.rcParams[\"xtick.direction\"] = \"in\"\n",
     "plt.rcParams[\"ytick.direction\"] = \"in\""
    ]
@@ -88,41 +89,41 @@
     "# ----------------------------------- #\n",
     "\n",
     "# read in the single test galaxy from HSC\n",
-    "#data = pd.read_pickle('data_test.pkl')\n",
-    "data_name = 'data_HSC_9697_patch_72.pkl' # storing just one patch locally so use it\n",
-    "df = pd.read_pickle(data_name) # 13827 is cool\n",
-    "data = df[df['parent_ID']==df['parent_ID'][4000]] \n",
-    "#data = df[df['parent_ID']==df['parent_ID'][4403]] \n",
+    "# data = pd.read_pickle('data_test.pkl')\n",
+    "data_name = \"data_HSC_9697_patch_72.pkl\"  # storing just one patch locally so use it\n",
+    "df = pd.read_pickle(data_name)  # 13827 is cool\n",
+    "data = df[df[\"parent_ID\"] == df[\"parent_ID\"][4000]]\n",
+    "# data = df[df['parent_ID']==df['parent_ID'][4403]]\n",
     "\n",
     "\n",
     "# make the single band galaxy\n",
-    "centers = jnp.asarray( [(src[0], src[1]) for src in data[\"loc\"]] )\n",
-    "box_size = jnp.asarray( [(src) for src in data[\"box_sz\"]] )\n",
+    "centers = jnp.asarray([(src[0], src[1]) for src in data[\"loc\"]])\n",
+    "box_size = jnp.asarray([(src) for src in data[\"box_sz\"]])\n",
     "key = random.split(random.PRNGKey(0), 1)\n",
     "\n",
     "# grab image data\n",
-    "multi_images = np.array([ np.array(data['scene_z'])[0] ]) \n",
-    "weights = 1 / np.array([np.array(data['var_z'])[0]])\n",
-    "psf = np.array([np.array(data['PSF_z'])[0]]) \n",
+    "multi_images = np.array([np.array(data[\"scene_z\"])[0]])\n",
+    "weights = 1 / np.array([np.array(data[\"var_z\"])[0]])\n",
+    "psf = np.array([np.array(data[\"PSF_z\"])[0]])\n",
     "\n",
     "# set it up for scarlet\n",
-    "images = multi_images \n",
+    "images = multi_images\n",
     "frame_psf = GaussianPSF(jnp.array((0, 0.2)), 0.7)\n",
     "model_frame = Frame(Box(images.shape), psf=frame_psf)\n",
     "\n",
     "# remove lower half of data\n",
     "for m in range(int(box_size[0] / 2) - 0):\n",
     "    # zero the weights\n",
-    "    weights[0][m,:] = 0 * weights[0][m,:]\n",
-    "#     # zero the data\n",
-    "    images[0][m,:] = 0 * images[0][m,:]\n",
+    "    weights[0][m, :] = 0 * weights[0][m, :]\n",
+    "    #     # zero the data\n",
+    "    images[0][m, :] = 0 * images[0][m, :]\n",
     "\n",
     "# create observation class\n",
     "obs = Observation(images, weights, psf=ArrayPSF(jnp.asarray(psf)))\n",
     "obs.match(model_frame)\n",
-    "print('----------------------------------------')\n",
+    "print(\"----------------------------------------\")\n",
     "print(f\"    Scene contains {len(centers)} galaxy sources\")\n",
-    "print('----------------------------------------')"
+    "print(\"----------------------------------------\")"
    ]
   },
   {
@@ -153,7 +154,7 @@
    ],
    "source": [
     "init_data = obs.data\n",
-    "plt.imshow(obs.data[0], cmap = 'cividis')"
+    "plt.imshow(obs.data[0], cmap=\"cividis\")"
    ]
   },
   {
@@ -214,26 +215,26 @@
     }
    ],
    "source": [
-    "# define initial circular model for initial morphology estimate \n",
-    "morph_init = [None]*len(centers)\n",
+    "# define initial circular model for initial morphology estimate\n",
+    "morph_init = [None] * len(centers)\n",
     "key = random.split(random.PRNGKey(0), 1)\n",
-    "sigma = .1 # noise factor\n",
+    "sigma = 0.1  # noise factor\n",
     "\n",
     "for i, bx in enumerate(box_size):\n",
     "    arr = np.zeros((bx, bx))\n",
-    "    rr, cc = draw.disk((bx/2, bx/2), radius=bx/10, shape=arr.shape)\n",
+    "    rr, cc = draw.disk((bx / 2, bx / 2), radius=bx / 10, shape=arr.shape)\n",
     "    arr[rr, cc] = 1\n",
     "    noise = random.normal(key, (bx, bx))\n",
-    "    raw =  (jnp.array(arr) + sigma * noise)\n",
-    "    normed = (raw-jnp.min(raw))/(jnp.max(raw)-jnp.min(raw))\n",
+    "    raw = jnp.array(arr) + sigma * noise\n",
+    "    normed = (raw - jnp.min(raw)) / (jnp.max(raw) - jnp.min(raw))\n",
     "    morph_init[i] = np.array(normed)\n",
-    "    \n",
+    "\n",
     "# remove lower half of data\n",
     "for m in range(int(box_size[0] / 2) - 0):\n",
-    "    morph_init[0][m,:] = 0 * morph_init[0][m,:]  \n",
+    "    morph_init[0][m, :] = 0 * morph_init[0][m, :]\n",
     "\n",
-    "    \n",
-    "plt.imshow(morph_init[0], cmap='cividis')"
+    "\n",
+    "plt.imshow(morph_init[0], cmap=\"cividis\")"
    ]
   },
   {
@@ -244,13 +245,15 @@
    "source": [
     "# Load up the Scene with constraints and prior selected\n",
     "keys = random.split(random.PRNGKey(0), 2)\n",
-    "src_num = len( centers )\n",
+    "src_num = len(centers)\n",
     "with Scene(model_frame) as scene:\n",
-    "    for i in range( src_num ):\n",
+    "    for i in range(src_num):\n",
     "        Source(\n",
     "            centers[i],\n",
-    "            ArraySpectrum(random.normal(keys[0], (1,)), constraint=PositiveConstraint()),\n",
-    "            ArrayMorphology(morph_init[i], prior=NNPrior())\n",
+    "            ArraySpectrum(\n",
+    "                random.normal(keys[0], (1,)), constraint=PositiveConstraint()\n",
+    "            ),\n",
+    "            ArrayMorphology(morph_init[i], prior=NNPrior()),\n",
     "        )"
    ]
   },
@@ -289,26 +292,32 @@
     "def lik_grad(model, obs):\n",
     "    sources = model()\n",
     "    neg_log_like = -obs.log_likelihood(sources)\n",
-    "    return  neg_log_like\n",
+    "    return neg_log_like\n",
+    "\n",
     "\n",
     "@eqx.filter_grad\n",
     "def lik_grad_2(model):\n",
     "    sources = model()\n",
     "    neg_log_like = -obs.log_likelihood(sources)\n",
-    "    return  neg_log_like\n",
+    "    return neg_log_like\n",
+    "\n",
     "\n",
     "@eqx.filter_value_and_grad\n",
     "def neural_grad(model, weight):\n",
     "    prior = 0.0\n",
     "    sources = model()\n",
     "    for i in range(src_num):\n",
-    "        prior += weight * model.sources[i].morphology.prior.log_prob( model.sources[i].morphology.value )\n",
-    "    return  -prior \n",
+    "        prior += weight * model.sources[i].morphology.prior.log_prob(\n",
+    "            model.sources[i].morphology.value\n",
+    "        )\n",
+    "    return -prior\n",
+    "\n",
     "\n",
     "def track_grad(model, obs, weigth):\n",
-    "    loss1, grad_lik    = lik_grad(model, obs)\n",
+    "    loss1, grad_lik = lik_grad(model, obs)\n",
     "    loss1, grad_neural = neural_grad(model, weigth)\n",
     "    return grad_lik, grad_neural\n",
+    "\n",
     "\n",
     "# ------------------ #\n",
     "# main train routine #\n",
@@ -317,10 +326,13 @@
     "def loss_fn_with_grad(model, obs, weight):\n",
     "    prior = 0.0\n",
     "    sources = model()\n",
-    "    neg_log_like = -obs.log_likelihood(sources) \n",
+    "    neg_log_like = -obs.log_likelihood(sources)\n",
     "    for i in range(src_num):\n",
-    "        prior += weight * model.sources[i].morphology.prior.log_prob( model.sources[i].morphology.value )\n",
-    "    return  neg_log_like - prior  \n",
+    "        prior += weight * model.sources[i].morphology.prior.log_prob(\n",
+    "            model.sources[i].morphology.value\n",
+    "        )\n",
+    "    return neg_log_like - prior\n",
+    "\n",
     "\n",
     "def make_step(model, obs, opt_state, weigth):\n",
     "    loss, grads = loss_fn_with_grad(model, obs, weigth)\n",
@@ -328,23 +340,24 @@
     "    model = eqx.apply_updates(model, updates)\n",
     "    return loss, grads, model, opt_state\n",
     "\n",
+    "\n",
     "# hyperparameters for gradient optimiser\n",
-    "learning_rate= 1.1e-1 # alter this if desired\n",
+    "learning_rate = 1.1e-1  # alter this if desired\n",
     "optim = optax.adam(learning_rate)\n",
     "opt_state = optim.init(eqx.filter(scene, eqx.is_array))\n",
     "best_loss = 1e20\n",
     "iters = 15\n",
-    "weight = 3.5 #1.5   # this controls how strong the neural net grads are\n",
+    "weight = 3.5  # 1.5   # this controls how strong the neural net grads are\n",
     "\n",
     "# fitting routine\n",
-    "pbar = tqdm(range(iters), desc='fitting sources')\n",
+    "pbar = tqdm(range(iters), desc=\"fitting sources\")\n",
     "for step in pbar:\n",
     "    loss, grads, scene, opt_state = make_step(scene, obs, opt_state, weight)\n",
     "    loss = loss.item()\n",
     "    pbar.set_description(f\" fitting sources ==>  step: {step} loss: {loss}\")\n",
-    "    \n",
+    "\n",
     "    # track gradient evolution\n",
-    "    if step == iters -2:\n",
+    "    if step == iters - 2:\n",
     "        grad_lik, grad_neural = track_grad(scene, obs, weight)\n",
     "        test = lik_grad_2(scene)\n",
     "\n",
@@ -378,10 +391,10 @@
    ],
    "source": [
     "# These should look far more like actual galaxies with the neural network acting as a constraint\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(15,6),dpi=120)\n",
-    "y = scene.sources[0].morphology() \n",
-    "ax.imshow(y, cmap = cmr.lilac)\n",
-    "ax.set_title(f\"reconstruction\", fontsize = 18)\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(15, 6), dpi=120)\n",
+    "y = scene.sources[0].morphology()\n",
+    "ax.imshow(y, cmap=cmr.lilac)\n",
+    "ax.set_title(f\"reconstruction\", fontsize=18)\n",
     "ax.invert_yaxis()\n",
     "plt.show()\n",
     "plt.clf()"
@@ -405,7 +418,7 @@
    ],
    "source": [
     "renders = obs.render(scene())\n",
-    "plt.imshow(renders[0], cmap = cmr.lilac)\n",
+    "plt.imshow(renders[0], cmap=cmr.lilac)\n",
     "plt.gca().invert_yaxis()"
    ]
   },
@@ -425,29 +438,34 @@
     "# --------------------- #\n",
     "# https://arxiv.org/pdf/2006.00719.pdf\n",
     "\n",
+    "\n",
     "# for regular functions f\n",
     "def hvp(f, primals, tangents):\n",
     "    return jvp(grad(f), primals, tangents)[1]\n",
+    "\n",
     "\n",
     "# for score functions\n",
     "def hvp_grad(grad_f, primals, tangents):\n",
     "    return jvp(grad_f, primals, tangents)[1]\n",
     "\n",
+    "\n",
     "# diagonals of Hessian from HVPs\n",
     "def hvp_rad(hvp, shape):\n",
-    "    max_iters = 4000 # maximum number of iterations\n",
+    "    max_iters = 4000  # maximum number of iterations\n",
     "    H = jnp.zeros(shape, dtype=jnp.float32)\n",
     "    H_ = jnp.zeros(shape, dtype=jnp.float32)\n",
     "    for i in range(max_iters):\n",
     "        key = random.PRNGKey(i)\n",
-    "        z = random.rademacher(key, shape , dtype=jnp.float32)\n",
+    "        z = random.rademacher(key, shape, dtype=jnp.float32)\n",
     "        H += jnp.multiply(z, hvp(z))\n",
     "        if i > 0:\n",
-    "            norm = jnp.linalg.norm(H/(i+1) - H_/i, ord=2)\n",
-    "            if norm < 1e-6 * jnp.linalg.norm(H/(i+1), ord=2): # gets reasonable results with 1e-2\n",
+    "            norm = jnp.linalg.norm(H / (i + 1) - H_ / i, ord=2)\n",
+    "            if norm < 1e-6 * jnp.linalg.norm(\n",
+    "                H / (i + 1), ord=2\n",
+    "            ):  # gets reasonable results with 1e-2\n",
     "                break\n",
     "        H_ = H\n",
-    "    return H/(i+1) "
+    "    return H / (i + 1)"
    ]
   },
   {
@@ -484,11 +502,12 @@
     "    log_like = -jnp.sum(weights * (model - data) ** 2) / 2\n",
     "    return log_like - log_norm\n",
     "\n",
+    "\n",
     "model_scene = scene()\n",
-    "morph = model_scene[0] \n",
+    "morph = model_scene[0]\n",
     "spectrum = jnp.array((1,))\n",
-    "data = obs.data[0] \n",
-    "weights = obs.weights[0] \n",
+    "data = obs.data[0]\n",
+    "weights = obs.weights[0]\n",
     "\n",
     "# jit the HVP for this loss and this morph model\n",
     "f = lambda morph: log_like(morph, spectrum, data, weights)\n",
@@ -527,10 +546,11 @@
    "source": [
     "@jax.grad\n",
     "def neural_grad(galaxy, weight):\n",
-    "    prior = weight * scene.sources[0].morphology.prior.log_prob( galaxy )\n",
+    "    prior = weight * scene.sources[0].morphology.prior.log_prob(galaxy)\n",
     "    return prior\n",
     "\n",
-    "#weight = 1\n",
+    "\n",
+    "# weight = 1\n",
     "morph = model_scene[0]\n",
     "f = lambda morph: neural_grad(morph, weight)\n",
     "jit_hvp_x2 = jit(lambda z: hvp_grad(f, (morph,), (z,)))\n",
@@ -568,7 +588,7 @@
    "source": [
     "# rotate images\n",
     "init_src = norm_2d(obs.data[0]) * obs.weights[0]\n",
-    "y = scene.sources[0].morphology() \n",
+    "y = scene.sources[0].morphology()\n",
     "y = renders[0]\n",
     "diff = -hvp_nn + hvp_ll\n",
     "init_src = scipy.ndimage.rotate(init_src, 270)\n",
@@ -595,40 +615,37 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(1, 5, figsize=(15,3.5),dpi=120)\n",
+    "fig, axes = plt.subplots(1, 5, figsize=(15, 3.5), dpi=120)\n",
     "\n",
-    "im4 = axes[0].imshow(norm_2d(init_src), vmin=0, vmax=1, cmap = cmr.sepia)\n",
+    "im4 = axes[0].imshow(norm_2d(init_src), vmin=0, vmax=1, cmap=cmr.sepia)\n",
     "axes[0].invert_yaxis()\n",
-    "plt.colorbar(im4, ax=axes[0],orientation='horizontal')\n",
+    "plt.colorbar(im4, ax=axes[0], orientation=\"horizontal\")\n",
     "\n",
     "\n",
-    "im4 = axes[1].imshow(norm_2d(y), vmin=0, vmax=1, cmap = cmr.sepia)\n",
+    "im4 = axes[1].imshow(norm_2d(y), vmin=0, vmax=1, cmap=cmr.sepia)\n",
     "axes[1].invert_yaxis()\n",
-    "plt.colorbar(im4, ax=axes[1],orientation='horizontal')\n",
+    "plt.colorbar(im4, ax=axes[1], orientation=\"horizontal\")\n",
     "\n",
-    "im2 = axes[2].imshow(hvp_ll, \n",
-    "                    cmap = cmr.sunburst)\n",
+    "im2 = axes[2].imshow(hvp_ll, cmap=cmr.sunburst)\n",
     "axes[2].invert_yaxis()\n",
-    "plt.colorbar(im2, ax=axes[2],orientation='horizontal')\n",
+    "plt.colorbar(im2, ax=axes[2], orientation=\"horizontal\")\n",
     "\n",
-    "im1 = axes[3].imshow(hvp_nn, \n",
-    "                    cmap = cmr.sunburst)\n",
+    "im1 = axes[3].imshow(hvp_nn, cmap=cmr.sunburst)\n",
     "axes[3].invert_yaxis()\n",
-    "plt.colorbar(im1, ax=axes[3],orientation='horizontal')\n",
+    "plt.colorbar(im1, ax=axes[3], orientation=\"horizontal\")\n",
     "\n",
     "true_max = np.max(np.abs(diff))\n",
-    "im3 = axes[4].imshow(diff, \n",
-    "                    cmap = 'RdBu_r', vmin = -true_max, vmax = true_max) \n",
+    "im3 = axes[4].imshow(diff, cmap=\"RdBu_r\", vmin=-true_max, vmax=true_max)\n",
     "axes[4].invert_yaxis()\n",
-    "plt.colorbar(im3, ax=axes[4],orientation='horizontal')\n",
+    "plt.colorbar(im3, ax=axes[4], orientation=\"horizontal\")\n",
     "\n",
     "\n",
-    "axes[0].set_title(\"initial galaxy\", fontsize = 17)\n",
-    "axes[1].set_title(\"reconstruction\", fontsize = 17)\n",
-    "axes[2].set_title(r\"$\\mathbf{H}_D (log\\mathcal{L}$)\", fontsize = 17)\n",
-    "axes[3].set_title(r\"$\\mathbf{H}_D (log\\mathcal{P}$)\", fontsize = 17)\n",
-    "axes[4].set_title(r\"hallucinations ($\\Delta \\mathbf{F}$)\", fontsize = 17)\n",
-    "plt.savefig('hessian_panels_half.pdf', dpi=250)\n",
+    "axes[0].set_title(\"initial galaxy\", fontsize=17)\n",
+    "axes[1].set_title(\"reconstruction\", fontsize=17)\n",
+    "axes[2].set_title(r\"$\\mathbf{H}_D (log\\mathcal{L}$)\", fontsize=17)\n",
+    "axes[3].set_title(r\"$\\mathbf{H}_D (log\\mathcal{P}$)\", fontsize=17)\n",
+    "axes[4].set_title(r\"hallucinations ($\\Delta \\mathbf{F}$)\", fontsize=17)\n",
+    "plt.savefig(\"hessian_panels_half.pdf\", dpi=250)\n",
     "plt.show()"
    ]
   }
